# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2

  11 Jul 2007; Roy Marples <uberlord@gentoo.org>:

    Don't do interactive when changing init, #174141.

  10 Jul 2007; Roy Marples <uberlord@gentoo.org>:

    init scripts and their extra options can now have descriptions, #184327.
    We no longer care about numerical runlevels, #184733.

  09 Jul 2007; Roy Marples <uberlord@gentoo.org>:

    Add an option to fork ldconfig in env-update, #182794

  06 Jul 2007; Roy Marples <uberlord@gentoo.org>:

    Add and delete IPv6 addresses and routes correctly on FreeBSD, #184430
    thanks to Friedrich Oslage.
    
  02 Jul 2007; Roy Marples <uberlord@gentoo.org>:

    Don't wait for services that were inactive, #183667 thanks to Daniel Drake

  30 Jun 2007; Roy Marples <uberlord@gentoo.org>:

    Don't set an early font if consolefont isn't in a runlevel, #183773.

  27 Jun 2007; Roy Marples <uberlord@gentoo.org>:

    Add --no-ldconfig option to env-update to match portage.

  26 Jun 2007; Roy Marples <uberlord@gentoo.org>:

    --nocolor works again, #181011 thanks to Daniel Drake.
    Change pwd to / for all init scripts, #181224.

  21 Jun 2007; Mike Frysinger <vapier@gentoo.org>:

    Allow urandom location to be customized #134489.

  02 Jun 2007; Mike Frysinger <vapier@gentoo.org>:

    Fix from comio for /proc/filesystems typo in localmount #180621.

    Use -q option with modprobe rather than sending to /dev/null.

  31 May 2007; Mike Frysinger <vapier@gentoo.org>:

    Don't warn about Factory clock when booting off of livecd.

  30 May 2007; Roy Marples <uberlord@gentoo.org>:

    Only call systohw in clock when we don't have adjfile or we aren't UTC.
    Use killall5 again so we can cleanly remount / readonly, #168977
    and #177689.

* baselayout-2.0.0_alpha3 (14 May 2007)

  14 May 2007; Roy Marples <uberlord@gentoo.org>:

    RC_INTERACTIVE now works, #178331.